style: add todo behind schudule date(late) style, fix todo array dates chart@

--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -13,6 +13,9 @@
     align-items: flex-start;
     color: white;
     cursor: pointer;
+    &.late{
+      color:#F87A7A
+    }
   }
  
   &__date{
@@ -39,6 +42,8 @@
     margin-right: 20px;
     cursor: pointer;
   }
+
+ 
 }
 ul{
   list-style: none;
